--- a/index.html
+++ b/index.html
@@ -1686,7 +1686,7 @@
           
             <a
               class="sqs-block-image-link content-fill"
-              href="https://raydium.io/swap/?inputMint=sol&amp;outputMint=73242b77KLvkkUNRQRT3CYNbNFq28dFoy8F2tF6apump"
+              href="https://raydium.io/swap/?inputMint=sol&amp;outputMint=xxxxxxxxxx"
               target="_blank"
             >
               
@@ -1754,7 +1754,7 @@
 </div></div></div><div class="fe-block fe-block-yui_3_17_2_1_1734473754256_29850"><div class="sqs-block html-block sqs-block-html" data-blend-mode="DARKEN" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:15.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:15.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:15.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:15.0&#125;&#125;" id="block-yui_3_17_2_1_1734473754256_29850"><div class="sqs-block-content">
 
 <div class="sqs-html-content">
-  <div class="sqsrte-scaled-text-container"><span class="sqsrte-scaled-text"><p style="text-align:center;white-space:pre-wrap;" class="">73242b77KLvkkUNRQRT3CYNbNFq28dFoy8F2tF6apump</p></span></div>
+  <div class="sqsrte-scaled-text-container"><span class="sqsrte-scaled-text"><p style="text-align:center;white-space:pre-wrap;" class="">xxxxxxxxxx</p></span></div>
 </div>
 
 
